html and css completed

--- a/index.html
+++ b/index.html
@@ -8,17 +8,25 @@
 </head>
 <body>
     <header class="header">
-        <h1>Tic-Tac-Toe</h1>
+        <h1 class="title">Tic-Tac-Toe</h1>
     </header>
     <div class="main">
-        <div class="turn">
+        <div class="message">
             <!-- turn -->
         </div>
         <div class="gameboard">
-            <!-- GAMEBOARD -->
+            <div class="field" data-index="0"></div>
+            <div class="field" data-index="1"></div>
+            <div class="field" data-index="2"></div>
+            <div class="field" data-index="3"></div>
+            <div class="field" data-index="4"></div>
+            <div class="field" data-index="5"></div>
+            <div class="field" data-index="6"></div>
+            <div class="field" data-index="7"></div>
+            <div class="field" data-index="8"></div>
         </div>
         <div class="button">
-            <button type="button" id="restart-button">RESTART</button><!-- BUTTON -->
+            <button type="button" id="restart-button">RESTART</button>
         </div>
         <div class="result-display">
             <!-- display result -->
@@ -27,6 +35,7 @@
     <footer class="footer">
         <div><p>Copyright Eriklindes</p></div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
     
