--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
         <h1 class="title">Tic-Tac-Toe</h1>
     </header>
     <div class="main">
-        <div class="message">
-            <!-- turn -->
-        </div>
+        <div class="message" id="message">Player X's turn</div>
         <div class="gameboard">
             <div class="field" data-index="0"></div>
             <div class="field" data-index="1"></div>
